Summary: WKWebView is missing an equivalent to WebKit 1's API to set the media style. <rdar://problem/49862107> and https://bugs.webkit.org/show_bug.cgi?id=203974

Reviewed by Alex Christensen.

Source/WebKit:

Covered by new API test.

This is basically:
- Expose a read/write property on WKWebView.
- Pipe the new media type to the WebProcess.
- Force a style recalc.

* UIProcess/API/Cocoa/WKWebView.h:
* UIProcess/API/Cocoa/WKWebView.mm:
(-[WKWebView setMediaType:]):
(-[WKWebView mediaType]):

* UIProcess/WebPageProxy.cpp:
(WebKit::WebPageProxy::setOverriddenMediaType):
* UIProcess/WebPageProxy.h:
(WebKit::WebPageProxy::overriddenMediaType const):

* WebProcess/WebCoreSupport/WebFrameLoaderClient.cpp:
(WebKit::WebFrameLoaderClient::overrideMediaType const):

* WebProcess/WebPage/WebPage.cpp:
(WebKit::WebPage::setOverriddenMediaType):
* WebProcess/WebPage/WebPage.h:
(WebKit::WebPage::overriddenMediaType const):
* WebProcess/WebPage/WebPage.messages.in:

Tools:

* TestWebKitAPI/TestWebKitAPI.xcodeproj/project.pbxproj:
* TestWebKitAPI/Tests/WebKitCocoa/MediaType.mm: Added.
(TEST):
* TestWebKitAPI/Tests/WebKitCocoa/ProcessSwapOnNavigation.mm:


Canonical link: https://commits.webkit.org/217499@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@252459 268f45cc-cd09-0410-ab3c-d52691b4dbfc